Add link to dataset on Zenodo.

--- a/publications/frontiers/dora_outlier_detection_frontiers.tex
+++ b/publications/frontiers/dora_outlier_detection_frontiers.tex
@@ -774,7 +774,10 @@ the National Aeronautics and Space Administration.
 % \href{http://home.frontiersin.org/about/author-guidelines#SupplementaryMaterial}{Supplementary Material} should be uploaded separately on submission, if there are Supplementary Figures, please include the caption in the same file as the figure. LaTeX Supplementary Material templates can be found in the Frontiers LaTeX folder.
 
 \section*{Data Availability Statement}
-The datasets [GENERATED/ANALYZED] for this study can be found in the [NAME OF REPOSITORY] [LINK]. 
+The datasets generated and analyzed for this study can be found in the
+``Multi-Domain Outlier Detection Dataset'' repository on Zenodo 
+(\url{https://doi.org/10.5281/zenodo.5941339}) (dataset will be made public
+with final publication). 
 % Please see the availability of data guidelines for more information, at https://www.frontiersin.org/about/author-guidelines#AvailabilityofData
 
 %\bibliographystyle{frontiersinSCNS_ENG_HUMS} % for Science, Engineering and Humanities and Social Sciences articles, for Humanities and Social Sciences articles please include page numbers in the in-text citations
