Update Zenodo link to DOI for all versions. #79

--- a/publications/frontiers/dora_outlier_detection_frontiers.tex
+++ b/publications/frontiers/dora_outlier_detection_frontiers.tex
@@ -776,8 +776,7 @@ the National Aeronautics and Space Administration.
 \section*{Data Availability Statement}
 The datasets generated and analyzed for this study can be found in the
 ``Multi-Domain Outlier Detection Dataset'' repository on Zenodo 
-(\url{https://doi.org/10.5281/zenodo.5941339}) (dataset will be made public
-with final publication). 
+(\url{https://doi.org/10.5281/zenodo.5941338}). 
 % Please see the availability of data guidelines for more information, at https://www.frontiersin.org/about/author-guidelines#AvailabilityofData
 
 %\bibliographystyle{frontiersinSCNS_ENG_HUMS} % for Science, Engineering and Humanities and Social Sciences articles, for Humanities and Social Sciences articles please include page numbers in the in-text citations
