--- a/publications/frontiers/dora_references.bib
+++ b/publications/frontiers/dora_references.bib
@@ -1,3 +1,10 @@
+@inproceedings{liang2018enhancing,
+  title={Enhancing the reliability of out-of-distribution image detection in neural networks},
+  author={Liang, Shiyu and Li, Yixuan and Srikant, R},
+  booktitle={6th International Conference on Learning Representations, ICLR 2018},
+  year={2018}
+}
+
 @article{zhao2019pyod,
   author  = {Zhao, Yue and Nasrullah, Zain and Li, Zheng},
   title   = {PyOD: A Python Toolbox for Scalable Outlier Detection},
